--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,20 @@
     padding: 0;
     color: azure;
 }
+*::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    border-radius: 3px;
+    background: var(--tertiary-color);
+  }
+  
+  *::-webkit-scrollbar-thumb {
+      border: 1px solid blue;
+    background-color: var(--primary-color);
+    border-radius: 3px;
+  }
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
