Corrige bugs do deploy

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -22,12 +22,12 @@
 }
 
 .banner {
-    width: 250px;
+    height: 75px;
     padding: 0px 25px;
 }
 
 .banner2 {
-    width: 75px;
+    height: 70px;
 }
 
 .title {
